Switch offset pagination to page-number-block style
Replaces the single hasNext boolean with pageLimit/lastPage so FE can
render a "[1][2]...[10][다음]" page bar. Bounds the covering-index scan
to the current block size instead of a full COUNT(*) -- cost depends
on block position, not table size. Cursor pagination is unchanged.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>